--- a/charts/local-kubevirt/crds/customresourcedefinition-cdis.cdi.kubevirt.io.yaml
+++ b/charts/local-kubevirt/crds/customresourcedefinition-cdis.cdi.kubevirt.io.yaml
@@ -16,7 +16,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.11.3
+    controller-gen.kubebuilder.io/version: v0.13.0
   name: cdis.cdi.kubevirt.io
 spec:
   group: cdi.kubevirt.io
@@ -143,6 +143,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    logVerbosity:
+                      description: LogVerbosity overrides the default verbosity level used to initialize loggers
+                      format: int32
+                      type: integer
                     podResourceRequirements:
                       description: ResourceRequirements describes the compute resource requirements.
                       properties:
@@ -1417,6 +1421,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    logVerbosity:
+                      description: LogVerbosity overrides the default verbosity level used to initialize loggers
+                      format: int32
+                      type: integer
                     podResourceRequirements:
                       description: ResourceRequirements describes the compute resource requirements.
                       properties:
