--- a/charts/local-kubevirt/templates/clusterrole-cdi-operator-cluster.yaml
+++ b/charts/local-kubevirt/templates/clusterrole-cdi-operator-cluster.yaml
@@ -25,7 +25,12 @@ rules:
       - clusterrolebindings
       - clusterroles
     verbs:
-      - '*'
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
   - apiGroups:
       - security.openshift.io
     resources:
@@ -37,22 +42,17 @@ rules:
       - update
       - create
   - apiGroups:
-      - ""
-    resources:
-      - pods
-      - services
-    verbs:
-      - get
-      - list
-      - watch
-      - delete
-  - apiGroups:
       - apiextensions.k8s.io
     resources:
       - customresourcedefinitions
       - customresourcedefinitions/status
     verbs:
-      - '*'
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
   - apiGroups:
       - cdi.kubevirt.io
       - upload.cdi.kubevirt.io
@@ -66,13 +66,44 @@ rules:
       - validatingwebhookconfigurations
       - mutatingwebhookconfigurations
     verbs:
-      - '*'
+      - create
+      - list
+      - watch
+  - apiGroups:
+      - admissionregistration.k8s.io
+    resourceNames:
+      - cdi-api-dataimportcron-validate
+      - cdi-api-populator-validate
+      - cdi-api-datavolume-validate
+      - cdi-api-validate
+      - objecttransfer-api-validate
+    resources:
+      - validatingwebhookconfigurations
+    verbs:
+      - get
+      - update
+      - delete
+  - apiGroups:
+      - admissionregistration.k8s.io
+    resourceNames:
+      - cdi-api-datavolume-mutate
+    resources:
+      - mutatingwebhookconfigurations
+    verbs:
+      - get
+      - update
+      - delete
   - apiGroups:
       - apiregistration.k8s.io
     resources:
       - apiservices
     verbs:
-      - '*'
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
   - apiGroups:
       - authorization.k8s.io
     resources:
@@ -117,7 +148,6 @@ rules:
     resources:
       - datasources
     verbs:
-      - list
       - get
   - apiGroups:
       - cdi.kubevirt.io
@@ -130,7 +160,7 @@ rules:
     resources:
       - cdis/finalizers
     verbs:
-      - '*'
+      - update
   - apiGroups:
       - ""
     resources:
@@ -141,7 +171,6 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - persistentvolumes
       - persistentvolumeclaims
     verbs:
       - get
@@ -152,6 +181,15 @@ rules:
       - delete
       - deletecollection
       - patch
+  - apiGroups:
+      - ""
+    resources:
+      - persistentvolumes
+    verbs:
+      - get
+      - list
+      - watch
+      - update
   - apiGroups:
       - ""
     resources:
@@ -203,9 +241,22 @@ rules:
   - apiGroups:
       - snapshot.storage.k8s.io
     resources:
-      - '*'
+      - volumesnapshots
+      - volumesnapshotclasses
+      - volumesnapshotcontents
     verbs:
-      - '*'
+      - get
+      - list
+      - watch
+      - create
+      - delete
+  - apiGroups:
+      - snapshot.storage.k8s.io
+    resources:
+      - volumesnapshots
+    verbs:
+      - update
+      - deletecollection
   - apiGroups:
       - apiextensions.k8s.io
     resources:
@@ -236,20 +287,6 @@ rules:
       - secrets
     verbs:
       - create
-  - apiGroups:
-      - batch
-    resources:
-      - cronjobs
-    verbs:
-      - list
-      - watch
-  - apiGroups:
-      - batch
-    resources:
-      - jobs
-    verbs:
-      - list
-      - watch
   - apiGroups:
       - kubevirt.io
     resources:
