kubevirt: add as default application
Signed-off-by: Jan Wozniak <wozniak.jan@gmail.com>

--- a/charts/local-kubevirt/templates/deployment-cdi-operator.yaml
+++ b/charts/local-kubevirt/templates/deployment-cdi-operator.yaml
@@ -20,7 +20,7 @@ metadata:
     operator.cdi.kubevirt.io: ""
     prometheus.cdi.kubevirt.io: "true"
   name: cdi-operator
-  namespace: cdi
+  namespace: kubevirt
 spec:
   replicas: 1
   selector:
