--- a/charts/local-kubevirt/templates/rolebinding-cdi-operator.yaml
+++ b/charts/local-kubevirt/templates/rolebinding-cdi-operator.yaml
@@ -20,7 +20,7 @@ metadata:
     app.kubernetes.io/managed-by: cdi-operator
     cdi.kubevirt.io: ""
   name: cdi-operator
-  namespace: cdi
+  namespace: kubevirt
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -28,4 +28,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: cdi-operator
-    namespace: cdi
+    namespace: kubevirt
