--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1277,6 +1277,11 @@ spec:
                             - preferred
                             - required
                           type: string
+                        nodeSelector:
+                          additionalProperties:
+                            type: string
+                          description: NodeSelector is a selector which restricts the set of nodes where etcd Pods can run.
+                          type: object
                         resources:
                           description: Resources allows to override the resource requirements for etcd Pods.
                           properties:
@@ -1347,11 +1352,6 @@ spec:
                             - preferred
                             - required
                           type: string
-                        nodeSelector:
-                          additionalProperties:
-                            type: string
-                          description: 'NodeSelector is a selector which restricts the set of nodes where etcd Pods can run. Multiple labels with a required value can be supplied.'
-                          type: object
                       type: object
                     konnectivityProxy:
                       description: KonnectivityProxy configures konnectivity-server and konnectivity-agent components.
