--- a/pkg/resources/test/fixtures/deployment-openstack-1.27.0-machine-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.27.0-machine-controller.yaml
@@ -102,7 +102,7 @@ spec:
               fieldPath: metadata.namespace
         - name: PROBER_KUBECONFIG
           value: /etc/kubernetes/kubeconfig/kubeconfig
-        image: quay.io/kubermatic/machine-controller:v1.58.0
+        image: quay.io/kubermatic/machine-controller:953e653fdb9b3c33890b1990b884491b57968983
         livenessProbe:
           failureThreshold: 3
           httpGet:
