--- a/.golangci.yml
+++ b/.golangci.yml
@@ -96,6 +96,10 @@ linters-settings:
           - { pkg: io/ioutil, desc: https://go.dev/doc/go1.16#ioutil }
           - { pkg: github.com/ghodss/yaml, desc: use sigs.k8s.io/yaml instead }
 
+  goconst:
+    min-occurrences: 5
+    ignore-tests: true
+
   importas:
     no-unaliased: true
     alias:
