--- a/pkg/resources/test/fixtures/deployment-openstack-1.26.0-operating-system-manager.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.26.0-operating-system-manager.yaml
@@ -81,7 +81,7 @@ spec:
               key: applicationCredentialSecret
               name: cloud-credentials
               optional: true
-        image: quay.io/kubermatic/operating-system-manager:v1.4.0
+        image: quay.io/kubermatic/operating-system-manager:7b7f7b37830c331eeb505095a3ff10b60a88e69e
         livenessProbe:
           failureThreshold: 3
           httpGet:
