--- a/pkg/resources/test/fixtures/deployment-vsphere-1.28.0-operating-system-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-vsphere-1.28.0-operating-system-manager-externalCloudProvider.yaml
@@ -52,7 +52,7 @@ spec:
             secretKeyRef:
               key: password
               name: cloud-credentials
-        image: quay.io/kubermatic/operating-system-manager:v1.4.0
+        image: quay.io/kubermatic/operating-system-manager:7b7f7b37830c331eeb505095a3ff10b60a88e69e
         livenessProbe:
           failureThreshold: 3
           httpGet:
