remove old CloudControllerReconcilledSuccessfully condition typo, fix many other smaller typos

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_constraints.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_constraints.yaml
@@ -137,7 +137,7 @@ spec:
                         type: string
                       type: array
                     scope:
-                      description: Scope accepts *, Cluster, or Namespaced which determines if cluster-scoped and/or namesapced-scoped resources are selected. (defaults to *)
+                      description: Scope accepts *, Cluster, or Namespaced which determines if cluster-scoped and/or namespace-scoped resources are selected. (defaults to *)
                       type: string
                   type: object
                 parameters:
