Create CiliumNetworkPolicies if feature gate is enabled and seed has API type
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/hack/reconciling.yaml
+++ b/hack/reconciling.yaml
@@ -66,4 +66,6 @@ resourceTypes:
   - { package: kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1, resourceName: DataVolume, importAlias: cdiv1beta1 }
   
   # velero/v1
-  - {package: github.com/vmware-tanzu/velero/pkg/apis/velero/v1, resourceName: BackupStorageLocation, importAlias: velerov1 }
+  - { package: github.com/vmware-tanzu/velero/pkg/apis/velero/v1, resourceName: BackupStorageLocation, importAlias: velerov1 }
+
+  - { package: github.com/cilium/cilium/pkg/k8s/apis/cilium.io/v2, resourceName: CiliumNetworkPolicy, importAlias: ciliumv2 }
