fix plural of CiliumNetworkPolicies
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/hack/reconciling.yaml
+++ b/hack/reconciling.yaml
@@ -69,4 +69,4 @@ resourceTypes:
   - { package: github.com/vmware-tanzu/velero/pkg/apis/velero/v1, resourceName: BackupStorageLocation, importAlias: velerov1 }
 
   # cilium.io/v2
-  - { package: github.com/cilium/cilium/pkg/k8s/apis/cilium.io/v2, resourceName: CiliumNetworkPolicy, importAlias: ciliumv2 }
+  - { package: github.com/cilium/cilium/pkg/k8s/apis/cilium.io/v2, resourceName: CiliumNetworkPolicy, resourceNamePlural: CiliumNetworkPolicies, importAlias: ciliumv2 }
