Create CiliumNetworkPolicies for apiserver when feature gate is set (#12886)
* Create CiliumNetworkPolicies if feature gate is enabled and seed has API type

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* fix verify issues

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* address review comments

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* fix plural of CiliumNetworkPolicies

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

---------

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/hack/reconciling.yaml
+++ b/hack/reconciling.yaml
@@ -66,4 +66,7 @@ resourceTypes:
   - { package: kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1, resourceName: DataVolume, importAlias: cdiv1beta1 }
   
   # velero/v1
-  - {package: github.com/vmware-tanzu/velero/pkg/apis/velero/v1, resourceName: BackupStorageLocation, importAlias: velerov1 }
+  - { package: github.com/vmware-tanzu/velero/pkg/apis/velero/v1, resourceName: BackupStorageLocation, importAlias: velerov1 }
+
+  # cilium.io/v2
+  - { package: github.com/cilium/cilium/pkg/k8s/apis/cilium.io/v2, resourceName: CiliumNetworkPolicy, resourceNamePlural: CiliumNetworkPolicies, importAlias: ciliumv2 }
