Add permission-generator mapping for WithEndpointResolverWithOptions
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/codegen/permission-generator/defaultmapper.yml
+++ b/codegen/permission-generator/defaultmapper.yml
@@ -20,6 +20,7 @@ modules:
       WithCredentialsProvider: null
       WithRegion: null
       WithRetryMaxAttempts: null
+      WithEndpointResolverWithOptions: null
 
   github.com/aws/aws-sdk-go-v2/credentials:
     funcs:
