update AWS EBS CSI

--- a/addons/Makefile
+++ b/addons/Makefile
@@ -55,8 +55,8 @@ aws-ebs-csi-driver:
 	mkdir -p csi/aws-ebs
 	cat csi/aws-ebs/_header.txt > $(OUTPUT_FILE)
 	helm --namespace kube-system template aws-ebs-csi-driver aws-ebs-csi-driver/aws-ebs-csi-driver \
-	  --version 2.22.0 \
-	  --set 'controller.k8sTagClusterId=\{{ .Cluster.Name }}' \
+	  --version 2.26.0 \
+	  --set 'controller.k8sTagClusterId=\{{ "{{ .Cluster.Name }}" }}' \
 	  --set 'node.securityContext.seccompProfile.type=RuntimeDefault' \
 	  --set 'controller.securityContext.seccompProfile.type=RuntimeDefault' \
 	  --api-versions 'policy/v1/PodDisruptionBudget' \
