update azuredisk CSI

--- a/addons/csi/azure-disk/csi-azuredisk-controller.yaml
+++ b/addons/csi/azure-disk/csi-azuredisk-controller.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.28.3/deploy/v1.28.3/csi-azuredisk-controller.yaml
+# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.29.2/deploy/v1.29.2/csi-azuredisk-controller.yaml
 #
 # Changes:
 # - image source includes registry templating
@@ -29,13 +29,16 @@
 {{ $version = "v1.25.0" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
-{{ $version = "v1.26.6" }}
+{{ $version = "v1.26.8" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.27" }}
 {{ $version = "v1.27.1" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.28" }}
-{{ $version = "v1.28.3" }}
+{{ $version = "v1.28.5" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.29" }}
+{{ $version = "v1.29.2" }}
 {{ end }}
 
 ---
@@ -66,7 +69,7 @@ spec:
         - name: csi-provisioner
           image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-provisioner:v3.5.0" }}
           args:
-            - "--feature-gates=Topology=true"
+            - "--feature-gates=Topology=true,HonorPVReclaimPolicy=true"
             - "--csi-address=$(ADDRESS)"
             - "--v=2"
             - "--timeout=30s"
@@ -113,13 +116,13 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: csi-snapshotter
-          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-snapshotter:v6.2.2" }}
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-snapshotter:v6.3.1" }}
           args:
             - "-csi-address=$(ADDRESS)"
             - "-leader-election"
             - "--leader-election-namespace=kube-system"
             - "--v=2"
-            - "--timeout=600s"
+            - "--timeout=1200s"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
