--- a/addons/csi/nutanix/csi-driver.yaml
+++ b/addons/csi/nutanix/csi-driver.yaml
@@ -12,23 +12,40 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# This file was generated using `make nutanix-csi-driver` and then modified:
+#
+# - added KKP CABundle handling
+# - fix "driver" typo
+
 {{ if eq .Cluster.CloudProviderName "nutanix" }}
 ---
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: csi-provisioner
+  name: nutanix-csi-controller
   namespace: kube-system
 ---
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: nutanix-csi-node
+  namespace: kube-system
+---
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: external-provisioner-runner
+  name: nutanix-csi-controller-role
   namespace: kube-system
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["nodes"]
+    verbs: ["get"]
   - apiGroups: [""]
     resources: ["persistentvolumes"]
     verbs: ["get", "list", "watch", "create", "delete", "update", "patch"]
@@ -55,50 +72,22 @@ rules:
     verbs: ["update"]
   - apiGroups: ["snapshot.storage.k8s.io"]
     resources: ["volumesnapshotcontents"]
-    verbs: ["create", "get", "list", "watch", "update", "delete"]
+    verbs: ["create", "get", "list", "watch", "update", "delete", "patch"]
   - apiGroups: ["snapshot.storage.k8s.io"]
     resources: ["volumesnapshotcontents/status"]
-    verbs: ["update"]
+    verbs: ["update", "patch"]
+  - apiGroups: ["storage.k8s.io"]
+    resources: ["csinodes"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get", "create", "delete", "update", "patch"]
 ---
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: csi-provisioner-role
-  namespace: kube-system
-subjects:
-  - kind: ServiceAccount
-    name: csi-provisioner
-    namespace: kube-system
-roleRef:
-  kind: ClusterRole
-  name: external-provisioner-runner
-  apiGroup: rbac.authorization.k8s.io
----
-# needed for StatefulSet
-kind: Service
-apiVersion: v1
-metadata:
-  name: csi-provisioner-ntnx-plugin
-  namespace: kube-system
-  labels:
-    app: csi-provisioner-ntnx-plugin
-spec:
-  selector:
-    app: csi-provisioner-ntnx-plugin
-  ports:
-    - name: dummy
-      port: 12345
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: csi-node-ntnx-plugin
-  namespace: kube-system
----
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-node-runner
+  name: nutanix-csi-node-role
   namespace: kube-system
 rules:
   - apiGroups: [""]
@@ -117,51 +106,94 @@ rules:
     resources: ["volumeattachments"]
     verbs: ["get", "list", "watch", "update"]
 ---
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-node-role
+  name: nutanix-csi-controller-binding
   namespace: kube-system
 subjects:
   - kind: ServiceAccount
-    name: csi-node-ntnx-plugin
+    name: nutanix-csi-controller
     namespace: kube-system
 roleRef:
   kind: ClusterRole
-  name: csi-node-runner
+  name: nutanix-csi-controller-role
   apiGroup: rbac.authorization.k8s.io
 ---
-
-apiVersion: storage.k8s.io/v1
-kind: CSIDriver
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi.nutanix.com
-spec:
-  attachRequired: false
-  podInfoOnMount: true
+  name: nutanix-csi-node-binding
+  namespace: kube-system
+subjects:
+  - kind: ServiceAccount
+    name: nutanix-csi-node
+    namespace: kube-system
+roleRef:
+  kind: ClusterRole
+  name: nutanix-csi-node-role
+  apiGroup: rbac.authorization.k8s.io
 ---
+# Source: nutanix-csi-storage/templates/service-prometheus-csi.yaml
+# Copyright 2021 Nutanix Inc
+#
+# example usage: kubectl create -f <this_file>
+#
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nutanix-csi-metrics
+  namespace: kube-system
+  labels:
+    app: nutanix-csi-metrics
+spec:
+  type: ClusterIP
+  selector:
+    app: nutanix-csi-controller
+  ports:
+    - name: provisioner
+      port: 9809
+      targetPort: 9809
+      protocol: TCP
+    - name: resizer
+      port: 9810
+      targetPort: 9810
+      protocol: TCP
+---
+# Source: nutanix-csi-storage/templates/ntnx-csi-node-ds.yaml
+# Copyright 2021 Nutanix Inc
+#
+# example usage: kubectl create -f <this_file>
+
 kind: DaemonSet
 apiVersion: apps/v1
 metadata:
-  name: csi-node-ntnx-plugin
+  name: nutanix-csi-node
   namespace: kube-system
 spec:
   selector:
     matchLabels:
-      app: csi-node-ntnx-plugin
+      app: nutanix-csi-node
+  updateStrategy:
+    type: "RollingUpdate"
+    rollingUpdate:
+      maxUnavailable: 10%
   template:
     metadata:
       labels:
-        app: csi-node-ntnx-plugin
+        app: nutanix-csi-node
     spec:
-      serviceAccount: csi-node-ntnx-plugin
+      serviceAccount: nutanix-csi-node
       hostNetwork: true
       containers:
         - name: driver-registrar
-          image: {{ Image "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.2.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.9.1" }}
           imagePullPolicy: IfNotPresent
           args:
-            - --v=5
+            - --v=2
             - --csi-address=$(ADDRESS)
             - --kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)
           env:
@@ -174,22 +206,19 @@ spec:
                 fieldRef:
                   fieldPath: spec.nodeName
           resources:
-            limits:
-              cpu: 100m
-              memory: 200Mi
             requests:
               cpu: 100m
-              memory: 200Mi
+              memory: 20Mi
           volumeMounts:
             - name: plugin-dir
               mountPath: /csi/
             - name: registration-dir
               mountPath: /registration
-        - name: csi-node-ntnx-plugin
+        - name: nutanix-csi-node
           securityContext:
             privileged: true
             allowPrivilegeEscalation: true
-          image: {{ Image "quay.io/karbon/ntnx-csi:v2.6.0" }}
+          image: {{ Image "quay.io/karbon/ntnx-csi:v2.6.6" }}
           imagePullPolicy: IfNotPresent
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
@@ -206,12 +235,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
-            - name: SSL_CERT_FILE
-              value: "/etc/kubermatic/certs/ca-bundle.pem"
           resources:
-            limits:
-              cpu: 100m
-              memory: 200Mi
             requests:
               cpu: 100m
               memory: 200Mi
@@ -231,9 +255,6 @@ spec:
               name: root-dir
               # This is needed because mount is run from host using chroot.
               mountPropagation: "Bidirectional"
-            - mountPath: /etc/kubermatic/certs
-              name: ca-bundle
-              readOnly: true
           ports:
             - containerPort: 9808
               name: http-endpoint
@@ -247,20 +268,19 @@ spec:
             periodSeconds: 2
             failureThreshold: 3
         - name: liveness-probe
+          resources:
+            requests:
+              cpu: 5m
+              memory: 20Mi
           volumeMounts:
             - mountPath: /csi
               name: plugin-dir
-          image: {{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.3.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.11.0" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=/csi/csi.sock
             - --http-endpoint=:9808
       priorityClassName: system-cluster-critical
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
-      tolerations:
-        - operator: "Exists"
       volumes:
         - name: registration-dir
           hostPath:
@@ -285,32 +305,46 @@ spec:
           hostPath:
             path: /
             type: Directory
-        - name: ca-bundle
-          configMap:
-            name: ca-bundle
 ---
+# Source: nutanix-csi-storage/templates/ntnx-csi-controller-deployment.yaml
+# Copyright 2021 Nutanix Inc
+#
+# example usage: kubectl create -f <this_file>
 
-kind: StatefulSet
+kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: csi-provisioner-ntnx-plugin
+  name: nutanix-csi-controller
   namespace: kube-system
 spec:
-  serviceName: csi-provisioner-ntnx-plugin
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 0
   selector:
     matchLabels:
-      app: csi-provisioner-ntnx-plugin
+      app: nutanix-csi-controller
   template:
     metadata:
       labels:
-        app: csi-provisioner-ntnx-plugin
+        app: nutanix-csi-controller
     spec:
-      serviceAccount: csi-provisioner
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: nutanix-csi-controller
+              topologyKey: kubernetes.io/hostname
+            weight: 100
+      serviceAccount: nutanix-csi-controller
       hostNetwork: true
       containers:
         - name: csi-provisioner
-          image: {{ Image "registry.k8s.io/sig-storage/csi-provisioner:v2.2.2" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-provisioner:v3.6.2" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
@@ -321,14 +355,12 @@ spec:
             - --default-fstype=ext4
             # This is used to collect CSI operation metrics
             - --http-endpoint=:9809
-            - --v=5
+            - --v=2
+            - --leader-election=true
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
           resources:
-            limits:
-              cpu: 100m
-              memory: 200Mi
             requests:
               cpu: 100m
               memory: 200Mi
@@ -336,38 +368,46 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-resizer
-          image: {{ Image "registry.k8s.io/sig-storage/csi-resizer:v1.2.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-resizer:v1.9.2" }}
           imagePullPolicy: IfNotPresent
           args:
-            - --v=5
+            - --v=2
             - --csi-address=$(ADDRESS)
             - --timeout=60s
-            - --leader-election=false
+            - --leader-election=true
             # NTNX CSI driver supports online volume expansion.
             - --handle-volume-inuse-error=false
             - --http-endpoint=:9810
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
+          resources:
+            requests:
+              cpu: 5m
+              memory: 30Mi
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-snapshotter
-          image: {{ Image "registry.k8s.io/sig-storage/csi-snapshotter:v4.2.1" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-snapshotter:v3.0.3" }}
           imagePullPolicy: IfNotPresent
           args:
           - --csi-address=$(ADDRESS)
-          - --leader-election=false
+          - --leader-election=true
           - --logtostderr=true
           - --timeout=300s
           env:
           - name: ADDRESS
             value: /csi/csi.sock
+          resources:
+            requests:
+              cpu: 5m
+              memory: 30Mi
           volumeMounts:
           - name: socket-dir
             mountPath: /csi
-        - name: ntnx-csi-plugin
-          image: {{ Image "quay.io/karbon/ntnx-csi:v2.6.0" }}
+        - name: nutanix-csi-plugin
+          image: {{ Image "quay.io/karbon/ntnx-csi:v2.6.6" }}
           imagePullPolicy: IfNotPresent
           securityContext:
             allowPrivilegeEscalation: true
@@ -386,9 +426,6 @@ spec:
             - name: SSL_CERT_FILE
               value: "/etc/kubermatic/certs/ca-bundle.pem"
           resources:
-            limits:
-              cpu: 100m
-              memory: 200Mi
             requests:
               cpu: 100m
               memory: 200Mi
@@ -414,25 +451,19 @@ spec:
             periodSeconds: 2
             failureThreshold: 3
         - name: liveness-probe
+          resources:
+            requests:
+              cpu: 5m
+              memory: 20Mi
           volumeMounts:
             - mountPath: /csi
               name: socket-dir
-          image: {{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.3.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.11.0" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=/csi/csi.sock
             - --http-endpoint=:9807
       priorityClassName: system-cluster-critical
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
-      tolerations:
-        - key: "node-role.kubernetes.io/master"
-          operator: "Exists"
-          effect: "NoSchedule"
-        - key: "node-role.kubernetes.io/controlplane"
-          operator: "Exists"
-          effect: "NoSchedule"
       volumes:
         - emptyDir: {}
           name: socket-dir
@@ -444,25 +475,19 @@ spec:
           configMap:
             name: ca-bundle
 ---
-apiVersion: v1
-kind: Service
+# Source: nutanix-csi-storage/templates/ntnx-csi-rbac.yaml
+# Copyright 2018 Nutanix Inc
+#
+# Configuration to deploy the Nutanix CSI driver
+#
+# example usage: kubectl create -f <this_file>
+---
+# Source: nutanix-csi-storage/templates/csi-driver.yaml
+apiVersion: storage.k8s.io/v1
+kind: CSIDriver
 metadata:
-  name: csi-metrics-service
-  namespace: kube-system
-  labels:
-    app: csi-provisioner-ntnx-plugin
+  name: csi.nutanix.com
 spec:
-  type: ClusterIP
-  selector:
-    app: csi-provisioner-ntnx-plugin
-  ports:
-    - name: provisioner
-      port: 9809
-      targetPort: 9809
-      protocol: TCP
-    - name: resizer
-      port: 9810
-      targetPort: 9810
-      protocol: TCP
-
+  attachRequired: false
+  podInfoOnMount: true
 {{ end }}
